--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''"
+		"prepare": "svelte-kit sync || echo ''",
+		"test": "jest"
+	},
+	"jest": {
+		"testEnvironment": "jsdom"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"jest": "^30.0.4",
+		"jest-environment-jsdom": "^30.0.4",
 		"svelte": "^5.0.0",
 		"vite": "^6.2.6"
 	}
